--- a/index.html
+++ b/index.html
@@ -23,6 +23,19 @@
     
 </section>
 
+<section class="mid-banner">
+    <div class="half-width">
+        <img src="images/jhankar.png" alt="">
+    </div>
+
+    <div class="half-width">
+        <h1> Share your experience with us</h1>
+        <h2>connect with us everywhere</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sunt amet, facere cum quos porro quas id quia perferendis vero praesentium maiores dolorem, reiciendis officia expedita tempore culpa numquam velit veritatis, sequi enim! Esse quisquam impedit, iste soluta laboriosam et molestiae est nihil excepturi sequi quidem, autem sed, assumenda rem.</p>
+        <a class="link-button" target="_blank" href="https://fonts.google.com/specimen/Titillium+Web">Hire me</a>
+    </div>
+</section>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
