--- a/index.html
+++ b/index.html
@@ -7,34 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabbir's Portfolio</title>
 
-<section class="top-banner">
-    <div class="half-width">    <h1>Welcome to</h1>
-        <h1> <span id="h1color">XENIDE</span> world</h1>
-        <h3>Welcome to XENIDE world</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci necessitatibus porro sequi unde hic esseitaque
-            iste vitae facere atque.</p> <br>
-            <a class="link-button" target="_blank" href="https://www.youtube.com/watch?v=8mpVn073LbE"> Click here</a>
 
-    </div>        
-    
-    <div class="half-width">
-        <img src="watch.png" alt="">
-    </div>
-    
-</section>
-
-<section class="mid-banner">
-    <div class="half-width">
-        <img src="images/jhankar.png" alt="">
-    </div>
-
-    <div class="half-width">
-        <h1> Share your experience with us</h1>
-        <h2>connect with us everywhere</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sunt amet, facere cum quos porro quas id quia perferendis vero praesentium maiores dolorem, reiciendis officia expedita tempore culpa numquam velit veritatis, sequi enim! Esse quisquam impedit, iste soluta laboriosam et molestiae est nihil excepturi sequi quidem, autem sed, assumenda rem.</p>
-        <a class="link-button" target="_blank" href="https://fonts.google.com/specimen/Titillium+Web">Hire me</a>
-    </div>
-</section>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -44,6 +17,39 @@
 </head>
 
 <body>
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1> <span id="h1color">XENIDE</span> world</h1>
+            <h3>Welcome to XENIDE world</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci necessitatibus porro sequi unde hic
+                esseitaque
+                iste vitae facere atque.</p> <br>
+            <a class="link-button" target="_blank" href="https://www.youtube.com/watch?v=8mpVn073LbE"> Click here</a>
+
+        </div>
+
+        <div class="half-width">
+            <img src="watch.png" alt="">
+        </div>
+
+    </section>
+
+    <section class="mid-banner">
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1> Share your experience with us</h1>
+            <h2>connect with us everywhere</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat sunt amet, facere cum quos porro quas id
+                quia perferendis vero praesentium maiores dolorem, reiciendis officia expedita tempore culpa numquam
+                velit veritatis, sequi enim! Esse quisquam impedit, iste soluta laboriosam et molestiae est nihil
+                excepturi sequi quidem, autem sed, assumenda rem.</p>
+            <a class="link-button" target="_blank" href="https://fonts.google.com/specimen/Titillium+Web">Hire me</a>
+        </div>
+    </section>
 
 </body>
 
