--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabbir's Portfolio</title>
 
-
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section class="top-banner">
+
+    <!-- 1ST PART STARTING FROM HERE -->
+
+    <section class="top-banner flexible-container">
+
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1> <span id="h1color">XENIDE</span> world</h1>
@@ -35,7 +36,11 @@
 
     </section>
 
-    <section class="mid-banner">
+    <!-- 2ND PART STARTING FROM HERE -->
+
+
+    <section class="mid-banner flexible-container">
+
         <div class="half-width">
             <img src="images/jhankar.png" alt="">
         </div>
@@ -49,7 +54,41 @@
                 excepturi sequi quidem, autem sed, assumenda rem.</p>
             <a class="link-button" target="_blank" href="https://fonts.google.com/specimen/Titillium+Web">Hire me</a>
         </div>
+
     </section>
+
+    <!-- 3RD PART STARTING FROM HERE -->
+
+    <section class="bottom-banner
+    ">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div>
+
+                <h1>My first ever portfolio</h1>
+                <h3>Trying my best to be a WEB-DEV</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore dolor cupiditate non
+                    harum
+                    repellat vero ducimus ipsa placeat suscipit?</p>
+
+            </div>
+
+
+            <div>
+
+                <h1>here im again</h1>
+                <h3>trying my besy again</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, labore voluptatibus?
+                    Exercitationem
+                    cupiditate id, odio aliquid maiores deleniti! Nostrum fuga vitae quia eaque, suscipit laborum!
+                    Exercitationem, nam natus sequi accusamus explicabo a illum consectetur tenetur, officiis enim
+                    dolore laborum qui?</p>
+
+            </div>
+        </div>
+
+    </section>
+
 
 </body>
 
