--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="mid-banner flexible-container">
 
         <div class="half-width">
-            <img src="images/jhankar.png" alt="">
+            <img src="watch.png" alt="">
         </div>
 
         <div class="half-width">
@@ -59,25 +59,25 @@
 
     <!-- 3RD PART STARTING FROM HERE -->
 
-    <section class="bottom-banner
-    ">
-        <h1>Experience</h1>
-        <div class="flexible-container">
-            <div>
+    <section class="bottom-banner">
 
-                <h1>My first ever portfolio</h1>
-                <h3>Trying my best to be a WEB-DEV</h3>
+        <h1>Experience</h1>
+
+        <div class="flexible-container">
+            <div id="rd-h1" class="box">
+
+                <h1 class="h1color">My first ever portfolio</h1>
+                <h3><i>Trying my best to be a WEB-DEV</i> </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt inventore dolor cupiditate non
-                    harum
-                    repellat vero ducimus ipsa placeat suscipit?</p>
+                 harumrepellat vero ducimus ipsa placeat suscipit?</p>
 
             </div>
 
 
-            <div>
+            <div class="box">
 
-                <h1>here im again</h1>
-                <h3>trying my besy again</h3>
+                <h1 class="h1color">Here im again</h1>
+                <h3> <i>Trying my best again</i></h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, labore voluptatibus?
                     Exercitationem
                     cupiditate id, odio aliquid maiores deleniti! Nostrum fuga vitae quia eaque, suscipit laborum!
@@ -91,5 +91,9 @@
 
 
 </body>
-
+<footer>
+    <p>
+        Visit my portfolio @nothing.com
+    </p>
+</footer>
 </html>
